updated page size into min-height

--- a/src/components/Page1.astro
+++ b/src/components/Page1.astro
@@ -4,7 +4,7 @@ import Ornament1 from "../assets/ornament-1.gif";
 import Ornament2 from "../assets/ornament-2.gif";
 ---
 
-<section id="Page1" class="h-screen w-full flex items-center justify-center overflow-hidden section">
+<section id="Page1" class="min-h-screen w-full flex items-center justify-center overflow-hidden section">
     <div id="Page1Content" class="w-5/6">
         <h1 class="text-lg text-center mb-20 z-0" id="textURInvited">YOU ARE INVITED TO</h1>
         <div class="flex items-center justify-center relative w-64 z-100 mx-auto mb-14">
