--- a/src/components/Page3.astro
+++ b/src/components/Page3.astro
@@ -9,7 +9,7 @@ import Ornament6 from "../assets/ornament-6.gif";
 
 <section
     id="Page3"
-    class="h-screen w-full flex justify-center overflow-hidden section"
+    class="min-h-screen w-full flex justify-center overflow-hidden section"
 >
     <div class="w-xl relative flex items-center">
         <Image
