--- a/src/components/Page4.astro
+++ b/src/components/Page4.astro
@@ -4,7 +4,7 @@
 
 <section
     id="Page4"
-    class="h-screen w-full flex justify-center overflow-hidden section"
+    class="min-h-screen w-full flex justify-center overflow-hidden section"
 >
     <div class="w-xl relative flex items-center">
         <div id="borderPage4" class="border-t-1 border-primary w-full max-w-5/6 absolute" style="top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
