--- a/src/components/Page5.astro
+++ b/src/components/Page5.astro
@@ -4,7 +4,7 @@
 
 <section
     id="Page5"
-    class="h-screen flex justify-center overflow-hidden section"
+    class="min-h-screen flex justify-center overflow-hidden section"
 >
     <div class="w-xl relative flex items-center">
         <div class="border-t-1 border-primary w-full max-w-5/6 absolute" style="top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
