--- a/src/components/Page7.astro
+++ b/src/components/Page7.astro
@@ -5,7 +5,7 @@ import AldanJulia2 from "../assets/gallery/aldanjulia2.png";
 
 <section
     id="Page7"
-    class="h-screen w-full flex justify-center overflow-hidden section"
+    class="min-h-screen w-full flex justify-center overflow-hidden section"
 >
     <div
         class="w-xl relative flex items-center bg-contain bg-no-repeat bg-bottom outline-5 outline-secondary shadow-2xl shadow-primary text-center"
