--- a/src/components/Page6.astro
+++ b/src/components/Page6.astro
@@ -26,7 +26,7 @@ import "iv-viewer/dist/iv-viewer.css";
 
 <section
     id="Page6"
-    class="h-screen w-full flex justify-center overflow-hidden section"
+    class="min-h-screen w-full flex justify-center overflow-hidden section"
 >
     <div class="w-xl relative flex items-center">
         <div class="max-w-5/6 mx-auto">
