--- a/src/components/Page3.astro
+++ b/src/components/Page3.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import Salam from "../assets/salam.svg";
+import Salam from "../assets/1/salam.svg";
 
 import Ornament5A from "../assets/ornament-5a.gif";
 import Ornament5B from "../assets/ornament-5b.gif";
