--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Page6 from "../components/Page6.astro";
 import Page7 from "../components/Page7.astro";
 import Page8 from "../components/Page8.astro";
 import Page9 from "../components/Page9.astro";
+import Page10 from "../components/Page10.astro";
 ---
 
 <Layout title="#AlDanLiaMenujuHalal2025">
@@ -21,4 +22,5 @@ import Page9 from "../components/Page9.astro";
     <Page7></Page7>
     <Page8></Page8>
     <Page9></Page9>
+    <Page10></Page10>
 </Layout>
