added background music

--- a/src/components/Page10.astro
+++ b/src/components/Page10.astro
@@ -31,9 +31,13 @@
                         >
                     </a>
                 </div>
-                <p class="text-xs text-gray-500">
+                <p class="text-xs text-gray-500 mb-3">
                     © 2025 THe-Mangcoy. Code licensed under MIT License.<br>
                     Gallery images are private. Third-party assets follow their own licenses.
+                </p>
+                <p class="text-xs text-gray-500 mb-3">
+                    Background music: Pachelbel - Canon in D - P. 37, <a class="underline" href="https://creativecommons.org/licenses/by-nc/4.0/">licensed under CC BY-NC 4.0</a><br>
+                    Recorded, produced and published by: <a  class="underline" href="https://www.gregorquendel.com">Gregor Quendel</a>
                 </p>
             </div>
         </div>
