--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,7 +32,7 @@ body {
 }
 
 body {
-    background-image: url('./xv.png');
+    background-image: url('xv.png');
     background-color: var(--color-background);
     background-repeat: repeat;
     background-size: 294px 235px;
