update config & page 7 story

--- a/src/components/Page9.astro
+++ b/src/components/Page9.astro
@@ -89,7 +89,7 @@
 
     async function LoadData() {
         let data = await actions.getData({});
-        console.log('loaded data', data);
+        // console.log('loaded data', data);
         if(content) {
             content.innerHTML = data['data']?.reduce((a, dd) => ((dd['nama'] != null && dd['pesan'] != null) ? ((a += contentHTML(dd)), a) : a), '') || "";
         }
