added name to input

--- a/src/components/Page1.astro
+++ b/src/components/Page1.astro
@@ -138,7 +138,7 @@ import Ornament2 from "../assets/ornament-2.gif";
         const txtNode = document.createElement('h2');
         const divNode = document.getElementById("Page1Content");
         txtNode.innerText = name;
-        txtNode.className = "text-center text-xl text-primary";
+        txtNode.className = "text-center text-xl text-secondary font-semibold";
         txtNode.id = "txtGuestName";
 
         divNode?.insertBefore(txtNode, divNode.children[divNode.children.length - 1]);
