--- a/src/components/Page9.astro
+++ b/src/components/Page9.astro
@@ -32,12 +32,15 @@
                         class="border border-secondary rounded w-full mb-2 bg-quaternary/10"
                         placeholder="Nama"
                         name="nama"
+                        id="forminputNama"
                     />
                     <textarea
                         class="border border-secondary rounded w-full mb-2 bg-quaternary/10"
                         placeholder="Your sweetest wishes..."
                         rows="3"
-                        name="pesan"></textarea>
+                        name="pesan"
+                        id="forminputPesan"
+                    ></textarea>
 
                     <button
                         type="submit"
@@ -60,6 +63,17 @@
 <script >
     import { actions } from "astro:actions";
     import { getActionContext } from "astro:actions";
+
+    let params = new URLSearchParams(window.location.search);
+    let name = params.get('name');
+
+    if(name != null) {
+        let _nInp = document.getElementById('forminputNama') as HTMLInputElement | null;
+        if(_nInp) {
+            _nInp.value = name;
+            _nInp.readOnly = true;
+        }
+    }
 
     const content = document.getElementById("contenWishes");
     const contentHTML =(data: {
@@ -120,14 +134,6 @@
             } catch (error) {
                 console.error(error);
             }
-
-            // fetch("/api/wishes", {
-            //     method: "POST",
-            //     body: JSON.stringify(data),
-            //     headers: {
-            //         "Content-type": "application/json; charset=UTF-8",
-            //     },
-            // });
         });
     }
 </script>
