refined submit pesan method

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -125,7 +125,7 @@ const { title } = Astro.props;
 	</script> -->
 
 	<script>
-		let isOpened = false;
+		let isOpened = true;
 		import { gsap } from "gsap";
 		import { ScrollToPlugin } from "gsap/ScrollToPlugin";
 		gsap.registerPlugin(ScrollToPlugin);
