--- a/src/components/Page9.astro
+++ b/src/components/Page9.astro
@@ -33,6 +33,7 @@
                         placeholder="Nama"
                         name="nama"
                         id="forminputNama"
+                        required
                     />
                     <textarea
                         class="border border-secondary rounded w-full mb-2 bg-quaternary/10"
@@ -40,12 +41,29 @@
                         rows="3"
                         name="pesan"
                         id="forminputPesan"
-                    ></textarea>
+                        required></textarea>
 
                     <button
                         type="submit"
                         class="bg-secondary hover:bg-primary hover:text-white text-quinary py-1 px-3 rounded-full cursor-pointer w-full"
+                        id="btnSubmitWishes"
                     >
+                        <svg
+                            id="spinnerSubmitWishes"
+                            aria-hidden="true"
+                            role="status"
+                            class="hidden w-4 h-4 me-3 text-white animate-spin"
+                            viewBox="0 0 100 101"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
+                                fill="#E5E7EB"></path>
+                            <path
+                                d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
+                                fill="currentColor"></path>
+                        </svg>
                         Kirim
                     </button>
                 </form>
@@ -55,61 +73,91 @@
                 class="border border-secondary rounded my-3 p-3 h-4/9 overflow-y-scroll"
                 id="contenWishes"
             >
-                
             </div>
         </div>
     </div>
 </section>
-<script >
+<script>
     import { actions } from "astro:actions";
     import { getActionContext } from "astro:actions";
 
     let params = new URLSearchParams(window.location.search);
-    let name = params.get('name');
+    let name = params.get("name");
 
-    if(name != null) {
-        let _nInp = document.getElementById('forminputNama') as HTMLInputElement | null;
-        if(_nInp) {
+    if (name != null) {
+        let _nInp = document.getElementById(
+            "forminputNama",
+        ) as HTMLInputElement | null;
+        if (_nInp) {
             _nInp.value = name;
             _nInp.readOnly = true;
         }
     }
 
     const content = document.getElementById("contenWishes");
-    const contentHTML =(data: {
-        id: number,
-        nama: string,
-        pesan: string,
-        dibuat_pada: Date
+    const contentHTML = (data: {
+        id: number;
+        nama: string;
+        pesan: string;
+        dibuat_pada: Date;
     }) => `
 <div class="bg-background/65 rounded shadow-md p-2 mb-2 backdrop-blur-sm">
     <div class="mb-1">
         <h4 class="text-secondary text-base font-bold">
-            ${data['nama'] || '-'}
+            ${data["nama"] || "-"}
         </h4>
         <h6 class="text-gray-500 text-xs">
-            ${data['dibuat_pada'].toLocaleDateString('id-ID', { year: 'numeric', month: 'long', day: 'numeric', weekday: 'long' })} ${data['dibuat_pada'].toLocaleTimeString('id-ID', { hour: '2-digit', minute: '2-digit', second: '2-digit' })}
+            ${data["dibuat_pada"].toLocaleDateString("id-ID", { year: "numeric", month: "long", day: "numeric", weekday: "long" })} ${data["dibuat_pada"].toLocaleTimeString("id-ID", { hour: "2-digit", minute: "2-digit", second: "2-digit" })}
         </h6>
     </div>
     <p class="text-primary text-sm">
-        ${data['pesan']}
+        ${data["pesan"]}
     </p>
 </div>
-    `
+    `;
     const form = document.getElementById(
         "formWishes",
     ) as HTMLFormElement | null;
 
-
     async function LoadData() {
         let data = await actions.getData({});
         // console.log('loaded data', data);
-        if(content) {
-            content.innerHTML = data['data']?.reduce((a, dd) => ((dd['nama'] != null && dd['pesan'] != null) ? ((a += contentHTML(dd)), a) : a), '') || "";
+        if (content) {
+            content.innerHTML =
+                data["data"]?.reduce(
+                    (a, dd) =>
+                        dd["nama"] != null && dd["pesan"] != null
+                            ? ((a += contentHTML(dd)), a)
+                            : a,
+                    "",
+                ) || "";
         }
     }
 
-    document.addEventListener('DOMContentLoaded', LoadData);
+    document.addEventListener("DOMContentLoaded", LoadData);
+
+    let getIsSubmitting: boolean = false;
+    function setIsSubmitting(value: boolean) {
+        const _spn = document.getElementById("spinnerSubmitWishes");
+        const _btn = document.getElementById(
+            "btnSubmitWishes",
+        ) as HTMLButtonElement | null;
+
+        if (_btn && _spn) {
+            if (value) {
+                _spn.classList.remove("hidden");
+                _spn.classList.add("inline");
+
+                _btn.disabled = true;
+            } else {
+                _spn.classList.remove("inline");
+                _spn.classList.add("hidden");
+
+                _btn.disabled = false;
+            }
+        }
+        getIsSubmitting = value;
+    }
 
     if (form) {
         form.addEventListener("submit", async (ev) => {
@@ -125,14 +173,25 @@
                 );
 
             try {
-                let result = await actions.save({
+                let body = {
                     nama: data["nama"].toString(),
                     pesan: data["pesan"].toString(),
-                });
+                };
+
+                if(!(body.nama != null && body.pesan != null)) {
+                    alert(`Nama dan pesan tidak boleh kosong!`);
+                    throw new Error('Nama dan pesan tidak boleh kosong!');
+                }
+                setIsSubmitting(true);
+                let result = await actions.save(body);
 
                 await LoadData();
+
+                await new Promise(resolve => setTimeout(resolve, Math.round(Math.random() * 2500)));
             } catch (error) {
                 console.error(error);
+            } finally {
+                setIsSubmitting(false);
             }
         });
     }
